# 1brc

./: README.md  x.py
cpp/: CMakeLists.txt
csharp/: Program.cs  Station.cs  StationReading.cs
res/data/generator/src/: main.rs
res/data/test/: measurements-1.out.json  measurements-10.out.json
zig/: build.zig
